# WaveRiderSDR

./: .gitignore  BRANCH_MERGE_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  IQ_CAPTURE_IMPLEMENTATION.md  LICENSE  OPTIMIZATION_SUMMARY.md  PLATFORM_GUIDE.md  QUICKSTART.md  README.md  SDR_SETUP.md  app.js  build.py  index.html  install.bat  install.ps1  install.sh  launch.bat  launch_gui.bat  requirements.txt  run.py  setup.py  styles.css  waverider-sdr.desktop  waverider_common.py  waverider_presets.json  waverider_sdr.py  waverider_tk_gui.py  waverider_web.py
.github/workflows/: ci.yml  release.yml
src/: band_plan.rs  common.rs  desktop.rs  dsp.rs  hackrf_capture.rs  main.rs  morse.rs  rtlsdr_capture.rs  state.rs  web.rs
templates/: index.html
tests/: test_api_contract.py
waverider/: __init__.py  main.py
waverider/config/: theme.py
waverider/core/: player.py  recorder.py  workspace.py
waverider/database/: devices.py
waverider/ui/: device_panel.py  main_window.py  recording_panel.py  theme_dialog.py  workspace_dialog.py
waverider_sdr/: transmitter.py
wix/: main.wxs
