[package]
name = "waverider_sdr"
version = "2.0.0"
edition = "2021"
description = "WaveRider SDR rewritten in Rust"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serialport = "4"
webbrowser = "1"
